// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArgumentList toAST() returns an array containing AST nodes 1`] = `
Array [
  Object {
    "literalType": undefined,
    "literalValue": undefined,
    "op": "arg",
    "var": "Baz",
  },
  Object {
    "literalType": "boolean",
    "literalValue": false,
    "op": "arg",
    "var": undefined,
  },
]
`;

exports[`ArgumentList toAST() returns an array containing AST nodes 2`] = `
Array [
  Object {
    "literalType": undefined,
    "literalValue": undefined,
    "op": "arg",
    "var": "Foo Bar",
  },
]
`;
